--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "devDependencies": {
+    "@abraham/reflection": "^0.7.0",
+    "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
     "ts-loader": "^8.0.4",
+    "tsyringe": "^4.3.0",
     "typescript": "^4.0.3",
     "webpack": "4.44.2",
     "webpack-cli": "^3.3.12",
@@ -9,6 +12,6 @@
     "yarn": "^1.22.5"
   },
   "dependencies": {
-    "phaser": "^3.24.1"
+    "pixi.js": "^5.3.3"
   }
 }
