--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "devDependencies": {
-    "@abraham/reflection": "^0.7.0",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
     "planck-js": "^0.3.22",
@@ -13,8 +12,9 @@
   },
   "dependencies": {
     "@types/css-font-loading-module": "^0.0.4",
+    "@types/mersenne-twister": "^1.1.2",
     "eventemitter3": "^4.0.7",
-    "pixi.js": "^5.3.3",
-    "random-js": "^2.1.0"
+    "mersenne-twister": "^1.1.0",
+    "pixi.js": "^5.3.3"
   }
 }
